fix color input to dark mode

--- a/src/components/BaseModal/BaseModal.module.css
+++ b/src/components/BaseModal/BaseModal.module.css
@@ -13,13 +13,15 @@
   border: none;
   background-color: transparent;
   position: absolute;
-  color:#2F2F2F;
+  color: #2f2f2f;
   right: 16px;
   top: 20px;
   padding: 0;
   line-height: 0;
   transition: all var(--transition-color-color);
 }
+
+/* почистити тут */
 .btn:hover {
   color: red;
   filter: drop-shadow(0 0 0.75rem crimson);
